# htmx_mockup

./: Dockerfile  README.md  collect.py  db.sqlite3  docker-compose.yaml  docker-compose.yml  notes.txt  play.ipynb  play.py  pyproject.toml
my_project/: settings.py  urls.py
serialize/: admin.py  models.py  urls.py  views.py
serialize/migrations/: 0001_initial.py  0002_alter_serializemaster_created_by_and_more.py  0003_alter_serializemaster_created_datetime_and_more.py  0004_alter_serializemaster_created_datetime_and_more.py
static/css/: main.css
swimlane/: impl_notes.txt  notes.txt  urls.py  utils.py  views.py
swimlane/etl/: extract.py  transform.py
swimlane/test_files/: active_printers copy.csv  active_printers.csv  active_printers_2026-03-07.csv  collect.swift  print_schedule_2026-03-07.csv  schedule_swimlane_now.csv
templates/base/: base.html  index.html
templates/content/: banner.html  filters.html  gallery.html  test.html
templates/serialize/: index.html
templates/serialize/content/: banner.html
templates/swimlane/: index.html
templates/swimlane/content/: filters.html  gantt.html
