[project]
name = "htmx-chub"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=5.2.7",
    "django-htmx>=1.26.0",
    "django-inline-svg>=0.1.1",
]

[dependency-groups]
dev = [
    "django-livereload-server>=0.5.1",
]
