[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=5.2.8",
    "django-extensions>=4.1",
    "django-htmx>=1.27.0",
    "django-inline-svg>=0.1.1",
    "django-livereload-server>=0.5.1",
    "gunicorn>=23.0.0",
    "polars-lts-cpu>=1.33.1",
    "python-dateutil>=2.9.0.post0",
    "werkzeug>=3.1.4",
]
